--- a/packages/web/locales/zh-CN.yml
+++ b/packages/web/locales/zh-CN.yml
@@ -150,6 +150,8 @@ form:
   error:
     account-nonempty: 账号不能为空
     password-nonempty: 密码不能为空
+    phone-maxLength: 手机号最多11位
+    phone-minLength: 手机号至少11位
     phone-nonempty: 手机号不能为空
     verify-code-nonempty: 验证码不能为空
 form-error:
@@ -177,17 +179,35 @@ home: 主页
 img-verify-code: 图形验证码
 job-number: 工号
 latitude: 纬度
-lega-form:
-  step:
-    success: 认证完成
 legal:
   enterprise: 企业认证
   identify-number: 证件号码
+  label:
+    audit-category: 认证类别
+    audit-status: 审核状态
+    business-license: 营业执照
+    cert-number: 证件号码
+    corp-name: 企业名称
+    id-card-front: 身份证正面
+    id-card-reverse: 身份证反面
+    org-name: 机构名称
+    reason: 原因
+    update-time: 更新时间
   personal: 个人认证
+  placeholder:
+    corp-identify: 请输入 18 位统一社会信用代码
+    corp-name: 请输入企业名称
   type:
     corp: 企业认证
     personal: 个人认证
   update-info: 更新认证信息
+  value:
+    enterprise: 企业
+    failed: 未通过
+    none: 无
+    passed: 已通过
+    pending: 待审核
+    personal: 个人
 legal-form:
   error:
     business-license: 请上传营业执照照片
@@ -198,8 +218,14 @@ legal-form:
   placeholder:
     identify: 请输入 18 位身份证号
   step:
+    description:
+      failed: 审核未通过，请重新提交审核
+      fill-info: 完善认证信息并提交
+      success: 审核通过，认证成功
+      waiting-verify: 我们将在1-3个工作日内完成审核
     failed: 认证失败
     fill-info: 填写信息
+    success: 认证完成
     waiting-verify: 等待审核
 loading: 加载中...
 loc_share: 位置共享
