feat: 编辑设备显示相关信息

--- a/packages/web/locales/zh-CN.yml
+++ b/packages/web/locales/zh-CN.yml
@@ -291,6 +291,8 @@ member:
       label: 密码
     phone:
       label: 手机号
+    product:
+      label: 产品型号
     track:
       label: 轨迹
   state: 状态
