--- a/packages/web/locales/zh-CN.yml
+++ b/packages/web/locales/zh-CN.yml
@@ -182,6 +182,7 @@ group-list: 群列表
 hint:
   please-select: 请选择...
 home: 主页
+i-have-read-and-agree: 我已阅读并同意
 img-verify-code: 图形验证码
 job-number: 工号
 latitude: 纬度
@@ -249,6 +250,7 @@ login:
     password:
       errMsg: 用户密码未填写
       placeholder: 密码
+    privacyAgreement: 隐私政策
     register: 注册
     rememberPassword: 记住密码
     successMsg: 登录成功
@@ -365,6 +367,7 @@ phone: 手机号
 phone-number: 电话号码
 plus: +
 priority: 优先级
+privacy-agreement: 隐私政策
 project:
   name: 微喇企业管理系统
 project-name: 微喇企业版
